--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gatsby": "^2.13.51",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-slick": "^0.24.0",
+    "redux": "^4.0.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
