--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.1.0",
     "react-slick": "^0.24.0",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
