--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "gatsby": "^2.13.51",
     "react": "^16.8.6",
+    "react-accessible-accordion": "^3.0.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scratchcard": "^1.1.2",
     "react-slick": "^0.24.0",
+    "react-virtualized": "^9.21.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1"
